--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <a href="marathons.html">Marathons</a>
         <a href="business.html">Finance</a>
         <a href="business.html">Comedy</a>
+        <a href="../comedy.html">Books</a>
       </nav>
     </div>
   </header>
