--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
         <p class="excerpt">What I've learned from being involved in standup and sketch comedy at USC.</p>
       </article>
 
+      <article class="card">
+        <h2><a href="posts/2025-12-24-Sketch.html">Sketch Comedy at USC: Reflections & My Biggest Takeaways.</a></h2>
+        <p class="meta">Dec 24, 2025 - Jan 1, 2026 · Comedy</p>
+        <p class="excerpt">Everything I learned from my Fall 2025 USC Sketch Comedy class, synthesized into one post.</p>
+      </article>
+
       
       <!-- Copy/paste another <article class="card"> ... </article> for each new post -->
     </div>
