--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
         <p class="excerpt">Everything I learned from my Fall 2025 USC Sketch Comedy class, synthesized into one post.</p>
       </article>
 
+      <article class="card">
+        <h2><a href="posts/2026-1-4-StevenHe.html">Steven He - USC Social Media Talk</a></h2>
+        <p class="meta">Jan 4, 2026 · Social Media / Comedy</p>
+        <p class="excerpt">My biggest takeaways from Sketch Comedy Content Creator Steven He's Nov 17th 2025 Talk at USC.</p>
+      </article>
+
       
       <!-- Copy/paste another <article class="card"> ... </article> for each new post -->
     </div>
