--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
         <p class="excerpt">My biggest takeaways from Sketch Comedy Content Creator Steven He's Nov 17th 2025 Talk at USC.</p>
       </article>
 
+      <article class="card">
+        <h2><a href="posts/2026-1-7-FanFix.html">Biggest Takeaways from Tour & Q&A With 25 Year Old Multimillionaire FanFix Founders</a></h2>
+        <p class="meta">Jan 7, 2026 · Social Media / Entrepreneurship</p>
+        <p class="excerpt">My biggest takeaways from a FanFix HQ (West Hollywood) Visit and Q&A with the 25 year old multimillionaire Co-founders Harry Gestetner & Simon Pompan.</p>
+      </article>
+
       
       <!-- Copy/paste another <article class="card"> ... </article> for each new post -->
     </div>
