--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </article>
 
       <article class="card">
-        <h2><a href="posts/2026-1-7-FanFix.html">Tactical Entrepreneurship Lessons From FanFix's 25 Year Old Multimillionaire Founders</a></h2>
+        <h2><a href="posts/2026-1-7-FanFix.html">Entrepreneurship Lessons From FanFix's 25 Year Old Multimillionaire Founders</a></h2>
         <p class="meta">Jan 7, 2026 · Social Media / Entrepreneurship</p>
         <p class="excerpt">My biggest takeaways from a FanFix HQ (West Hollywood) Visit and Q&A with the 25 year old multimillionaire Co-founders Harry Gestetner & Simon Pompan.</p>
       </article>
