--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@
         <p class="excerpt">An absolute entrepreneurship masterclass from a FanFix HQ (West Hollywood) Visit and Q&A with the 25 year old multimillionaire Co-founders Harry Gestetner & Simon Pompan. An absolute MUST-read for every young entrepreneur.</p>
       </article>
 
+      <article class="card">
+        <h2><a href="posts/2026-1-8-USC-Entrepreneur-Panel.html">USC Entrepreneurship Masterclass from Jacob Pace, Sam Freeman, Jenna Gestetner</a></h2>
+        <p class="meta">Jan 8, 2026 · Social Media / Entrepreneurship</p>
+        <p class="excerpt">My biggest takeaways from my notes on a USC entrepreneurship talk featuring three entrepenrus in their 20s (Jacob Pace, Jenna Gestetner, Sam Freeman) from a talk I attended on Jan 28th, 2025.</p>
+      </article>
+
+      
       
       <!-- Copy/paste another <article class="card"> ... </article> for each new post -->
     </div>
