--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
         <p class="excerpt">My biggest takeaways from my notes on a USC entrepreneurship talk featuring three entrepenrus in their 20s (Jacob Pace, Jenna Gestetner, Sam Freeman) from a talk I attended on Jan 28th, 2025.</p>
       </article>
 
+      <article class="card">
+        <h2><a href="posts/2026-1-8=9-Honarvar-Talk.html">Zack Honarvar - Founder, Manager of Airrack and Yes Theory</a></h2>
+        <p class="meta">Jan 9, 2026 · Social Media / Entrepreneurship</p>
+        <p class="excerpt">Zack Honarvar's advice to USC Social Media Students on November 2nd, 2022.</p>
+      </article>
+
       
       
       <!-- Copy/paste another <article class="card"> ... </article> for each new post -->
