--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
         <p class="excerpt">Zack Honarvar's advice to USC Social Media Students on November 2nd, 2022.</p>
       </article>
 
+      <article class="card">
+        <h2><a href="posts/2026-1-11-Mar2023Talks.html">USC Creator Talks - From USC to Becoming Highly Successful Full Time Creators (Alan Chikin Chow & Cosette Rinab)</a></h2>
+        <p class="meta">Jan 12, 2026 · Social Media / Entrepreneurship</p>
+        <p class="excerpt">Advice (from March 2023) from two successful USC Alums - Alan Chikin Chow (USC '19) and Cosette Rinab (USC '21) who went on to become massively successful full time creators after leaving USC. </p>
+      </article>
+
       
       
       <!-- Copy/paste another <article class="card"> ... </article> for each new post -->
