--- a/index.html
+++ b/index.html
@@ -81,12 +81,10 @@
         <h2><a href="posts/2026-1-11-Mar2023Talks.html">USC Creator Talks - From USC to Becoming Highly Successful Full Time Creators (Alan Chikin Chow & Cosette Rinab)</a></h2>
         <p class="meta">Jan 12, 2026 · Social Media / Entrepreneurship</p>
         <p class="excerpt">Advice (from March 2023) from two successful USC Alums - Alan Chikin Chow (USC '19) and Cosette Rinab (USC '21) who went on to become massively successful full time creators after leaving USC. </p>
-      </article>
-
-      1-16-26_Suarez.html
+      </article>      
 
       <article class="card">
-        <h2><a href="posts/2026-1-11-Mar2023Talks.html">"It's All About How Well You Can Market It" - Eric Suarez' Advice For Social Media Success</a></h2>
+        <h2><a href="posts/1-16-26_Suarez.html">"It's All About How Well You Can Market It" - Eric Suarez' Advice For Social Media Success</a></h2>
         <p class="meta">Jan 16, 2026 · Social Media / Entrepreneurship</p>
         <p class="excerpt">A live blog post where I reflect on social media advice from Eric Suarez and Colin & Samir as it applies to my channel in January 2026.</p>
       </article>
