--- a/index.html
+++ b/index.html
@@ -88,7 +88,12 @@
         <p class="meta">Jan 16, 2026 · Social Media / Entrepreneurship</p>
         <p class="excerpt">A live blog post where I reflect on social media advice from Eric Suarez and Colin & Samir as it applies to my channel in January 2026.</p>
       </article>
-      
+
+      <article class="card">
+        <h2><a href="posts/posts/2026-2-7-Honarvar2.html">Analysis of 2019 Zack Honarvar Podcast</a></h2>
+        <p class="meta">Feb 7, 2026 · Social Media / Entrepreneurship</p>
+        <p class="excerpt">Analysis and Learnings From a Zack Honarvar March 2019 Podcast Appearance.</p>
+      </article>
       
       <!-- Copy/paste another <article class="card"> ... </article> for each new post -->
     </div>
