--- a/index.html
+++ b/index.html
@@ -94,6 +94,14 @@
         <p class="meta">Feb 7, 2026 · Social Media / Entrepreneurship</p>
         <p class="excerpt">Analysis and Learnings From a Zack Honarvar March 2019 Podcast Appearance.</p>
       </article>
+
+      <article class="card">
+        <h2><a href="posts/2026-2-9-AdamWaheed.html">Adam Waheed (55 Million Followers) 2023 USC Talk - How To Make It Big On Social media</a></h2>
+        <p class="meta">Feb 9, 2026 · Social Media / Entrepreneurship</p>
+        <p class="excerpt">Mega-Creator Adam Waheed's Advice For Becoming an Influencer to USC Students in November 2023.</p>
+      </article>
+
+      
       
       <!-- Copy/paste another <article class="card"> ... </article> for each new post -->
     </div>
